# openstack-guest-agents-windows-xenserver

./: .bzrignore  .gitignore  Click To Build.bat  Properties.rb  rakefile.rb
src/: WindowsConfigurationAgent.sln
src/Rackspace.Cloud.Server.Agent/: CommandFactory.cs  ExecutableProcessQueue.cs  ExtensionAttribute.cs  IoC.cs  Rackspace.Cloud.Server.Agent.csproj
src/Rackspace.Cloud.Server.Agent.DiffieHellman/: Rackspace.Cloud.Server.DiffieHellman.csproj
src/Rackspace.Cloud.Server.Agent.DiffieHellman/mono/: PrimeGeneratorBase.cs
src/Rackspace.Cloud.Server.Agent.Service/: Rackspace.Cloud.Server.Agent.Service.csproj  expand.scr
src/Rackspace.Cloud.Server.Agent.Specs/: ActivateWindowsUsingKmsSpec.cs  EncryptionSpec.cs  ExtensionsSpec.cs  InjectFileHandlerSpec.cs  JsonSpec.cs  Rackspace.Cloud.Server.Agent.Specs.csproj  ResetNetworkSpec.cs  SetNetworkInterfaceSpec.cs  UnzipperSpec.cs  Utility.cs  XentoolsUpdateSpec.cs
src/Rackspace.Cloud.Server.Agent.UpdaterService/: Rackspace.Cloud.Server.Agent.UpdaterService.csproj
src/Rackspace.Cloud.Server.Agent.UpdaterService/Properties/: AssemblyInfo.cs
src/Rackspace.Cloud.Server.Agent/Actions/: FileCopier.cs  IPFinder.cs  SetNetworkInterface.cs
src/Rackspace.Cloud.Server.Agent/Commands/: ResetNetwork.cs
src/Rackspace.Cloud.Server.Agent/Configuration/: Ipv4Tuple.cs  Ipv6Tuple.cs  NetworkInterface.cs
src/Rackspace.Cloud.Server.Agent/Utilities/: Extensions.cs
src/unix/: AUTHORS  Common.am  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac  install_libs.py  install_libs.sh  install_modules.py  nova-agent.py  patch_binary.py  patch_libs.py  run_tests.py
src/unix/commands/: Makefile.am  __init__.py  command_list.py  file_inject.py  misc.py  network.py  password.py  update.py
src/unix/commands/arch/: __init__.py  network.py
src/unix/commands/debian/: network.py
src/unix/commands/gentoo/: __init__.py  network.py
src/unix/commands/redhat/: __init__.py  network.py
src/unix/commands/suse/: __init__.py  network.py
src/unix/include/: config.h.in  logging.h  nova-agent.h  nova-agent_int.h  plugin.h  plugin_int.h  python.h  python_int.h
src/unix/lib/: Makefile.am  __init__.py  agentlib.c  agentlib.h  agentlib_int.h  libagent_int.h  logging.c  logging.h  logging_int.h  plugin.c  plugin.h  plugin_int.h
src/unix/plugins/: Makefile.am  Makefile.in  __init__.py  jsonparser.py  xenstore.c  xscomm.py
src/unix/plugins/jsonparser/: __init__.py  jsonparser.py
src/unix/plugins/jsonparser/commands/: __init__.py  file_inject.py  misc.py  network.py  password.py  update.py
src/unix/plugins/jsonparser/commands/debian/: __init__.py  network.py
src/unix/plugins/jsonparser/commands/redhat/: __init__.py  network.py
src/unix/plugins/xenstore/: Makefile.am  Makefile.in  __init__.py  xenstore.c
src/unix/scripts/: agent-smith  installer.sh.in  nova-agent.init  nova-agent.redhat.init
src/unix/src/: Makefile.am  Makefile.in  logging.c  nova-agent.c  plugin.c  python.c
src/unix/tests/: Makefile.am  agent_test.py  test_injectfile.py  test_jsonparser.py  test_misc_commands.py  test_password_commands.py  test_resetnetwork_etchost.py  test_resetnetwork_hostname.py  test_resetnetwork_interfaces.py  test_unknown_command.py  test_update_command.py
src/windows/xenserver/: README.txt
src/windows/xenserver/src/Rackspace.Cloud.Server.Agent/: AgentUpdateMessageSender.cs  ExecutableProcess.cs  ExecutableProcessQueue.cs  ExtensionAttribute.cs  IoC.cs  ProdTimer.cs  XenNetworkInformation.cs
src/windows/xenserver/src/Rackspace.Cloud.Server.Agent.DiffieHellman/: DiffieHellmanManaged.cs  IDiffieHellman.cs  Rackspace.Cloud.Server.DiffieHellman.csproj
src/windows/xenserver/src/Rackspace.Cloud.Server.Agent.Service/: AgentService.Designer.cs  AgentService.cs  Program.cs  Rackspace.Cloud.Server.Agent.Service.csproj  ServerClass.cs
src/windows/xenserver/src/Rackspace.Cloud.Server.Agent.Specs/: AgentUpdateSpec.cs  DownloaderSpec.cs  StructureMapSpec.cs
src/windows/xenserver/src/Rackspace.Cloud.Server.Agent.UpdaterService/: App.config  Constants.cs  CustomExceptions.cs  Do.cs  HostUpdater.cs  Program.cs  Rackspace.Cloud.Server.Agent.UpdaterService.csproj  UpdaterService.Designer.cs
src/windows/xenserver/src/Rackspace.Cloud.Server.Common/: Rackspace.Cloud.Server.Common.csproj
src/windows/xenserver/src/Rackspace.Cloud.Server.DiffieHellman.Specs/: Rackspace.Cloud.Server.DiffieHellman.Specs.csproj
src/xenserver/windows/: BuildUtils.rb  Properties.rb  rakefile.rb
src/xenserver/windows/src/: LICENSE.txt  WindowsConfigurationAgent.sln
src/xenserver/windows/src/Rackspace.Cloud.Server.Agent.Deployer/: Product.wxs  Rackspace.Cloud.Server.Agent.Deployer.wixproj
windows/xenserver/: Properties.rb  installagentservice.bat  installupdateservice.bat  rakefile.rb
windows/xenserver/src/Rackspace.Cloud.Server.Agent/: ExecutableProcessCommandPatternSubsitution.cs  XenStore.cs
windows/xenserver/src/Rackspace.Cloud.Server.Agent.DiffieHellman/: Rackspace.Cloud.Server.DiffieHellman.csproj
windows/xenserver/src/Rackspace.Cloud.Server.Agent.Specs/: AdministratorAccountNameFinderSpec.cs  ChecksumValidatorSpec.cs  ExtensionsSpec.cs  FeaturesSpec.cs  JsonSpec.cs  ReadNetworkInformationSpec.cs  ResetNetworkSpec.cs  RestartServiceSpec.cs  SetNetworkRoutesSpec.cs  SetPasswordCommandSpec.cs  TimeElapsedSpec.cs  UnrescueSpec.cs  VersionCheckerSpec.cs  VersionSpec.cs  XenStoreSpec.cs
windows/xenserver/src/Rackspace.Cloud.Server.Agent.UpdaterService/: AgentUpdater.cs  CustomExceptions.cs  Rackspace.Cloud.Server.Agent.UpdaterService.csproj
xenserver/src/Rackspace.Cloud.Server.Agent/: Constants.cs  Rackspace.Cloud.Server.Agent.csproj
xenserver/src/Rackspace.Cloud.Server.Agent.Service/: app.config
xenserver/src/Rackspace.Cloud.Server.Agent.UpdaterService/: UpdaterService.Designer.cs
xenserver/src/Rackspace.Cloud.Server.Agent.UpdaterService/Commands/: CheckSumCheck.cs
xenserver/src/Rackspace.Cloud.Server.Agent/Commands/: AgentUpdate.cs  UpdaterUpdate.cs
xenserver/src/Rackspace.Cloud.Server.Common/Communication/: Connector.cs
(+202 files in other folders)
