
include $(top_srcdir)/Common.am

dist_commands_SCRIPTS = __init__.py command_list.py network.py \
						update.py file_inject.py misc.py password.py

nobase_dist_commands_SCRIPTS = debian/__init__.py debian/network.py \
							redhat/__init__.py redhat/network.py \
							arch/__init__.py arch/network.py \
							suse/__init__.py suse/network.py \
							gentoo/__init__.py gentoo/network.py
