
include $(top_srcdir)/Common.am

dist_noinst_SCRIPTS = __init__.py agent_test.py \
                      test_injectfile.py test_resetnetwork_etchost.py \
                      test_jsonparser.py test_resetnetwork_hostname.py \
                      test_misc_commands.py \
					  test_resetnetwork_interfaces.py \
                      test_password_commands.py \
					  test_unknown_command.py



